# MarkdownViewerPlusPlus

./: .gitignore  AI_UNDERSTANDING.md  BUILDING_NATIVE.md  CMakeLists.txt  CMakePresets.json  README.md  SESSION_LOG_2026-04-24_1714_PDT.md  SESSION_LOG_2026-04-27_1617_PDT.md
.github/: ISSUE_TEMPLATE.md
.github/workflows/: release.yml
AI_UNDERSTANDING/: CMakeLists.txt.aiu.json  CMakePresets.json.aiu.json  _meta.json
AI_UNDERSTANDING/MarkdownPlusPlus.Native/assets/: preview.css.aiu.json  preview.js.aiu.json
AI_UNDERSTANDING/MarkdownPlusPlus.Native/assets/mermaid/: README.md.aiu.json
AI_UNDERSTANDING/MarkdownPlusPlus.Native/src/: ClipboardUtil.cpp.aiu.json  ClipboardUtil.h.aiu.json  HtmlUtil.cpp.aiu.json  HtmlUtil.h.aiu.json  MarkdownPlusPlus.rc.aiu.json  MarkdownRenderer.cpp.aiu.json  MarkdownRenderer.h.aiu.json  NppApi.h.aiu.json  PluginController.cpp.aiu.json  PluginController.h.aiu.json  PluginExports.cpp.aiu.json  PluginOptions.cpp.aiu.json  PluginOptions.h.aiu.json  PreviewWindow.cpp.aiu.json  PreviewWindow.h.aiu.json  WebViewHost.cpp.aiu.json  WebViewHost.h.aiu.json  WinUtil.cpp.aiu.json  WinUtil.h.aiu.json  resource.h.aiu.json
AI_UNDERSTANDING/tools/: build-native.ps1.aiu.json  check-deps.py.aiu.json  install-native-deps.py.aiu.json  install-native-plugin.ps1.aiu.json
MarkdownPlusPlus.Native/: BACKLOG.md  CMakeLists.txt  DEPENDENCIES.md  README.md  RELEASE_NOTES.md  SMOKE_CHECKLIST.md
MarkdownPlusPlus.Native/assets/: preview.css  preview.js
MarkdownPlusPlus.Native/assets/mermaid/: README.md
MarkdownPlusPlus.Native/src/: ClipboardUtil.cpp  ClipboardUtil.h  HtmlUtil.cpp  HtmlUtil.h  MarkdownPlusPlus.rc  MarkdownRenderer.cpp  MarkdownRenderer.h  NppApi.h  PluginController.cpp  PluginController.h  PluginExports.cpp  PluginOptions.cpp  PluginOptions.h  PreviewWindow.cpp  PreviewWindow.h  WebViewHost.cpp  WebViewHost.h  WinUtil.cpp  WinUtil.h  resource.h
smoke-tests/: markdownplusplus-smoke.md  smoke-test.md
tools/: build-native.ps1  check-deps.py  install-native-deps.py  install-native-plugin.ps1
